# hra-tissue-block-annotation

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  server.sh
.github/workflows/: production-api-build.yml
collision_detection_http_service/: CMakeLists.txt  client.cpp  request.json  request_example.json  response_example.json  server2.cpp
collision_detection_http_service/build2/: CMakeCache.txt  Makefile  client  cmake_install.cmake  server2
collision_detection_http_service/geometry/: algo.cpp  algo.h  json_utils.cpp  json_utils.h  mymesh.cpp  mymesh.h  utils.cpp  utils.h
docs/: README.md  index.html
examples/: test-registration-collisions.json  test-registration-largeblock.json  test-registration.json
glbparser/: gen_tissue.py  glb_parser.py  main.py
mesh_processing/: CMakeLists.txt  mesh_checker.cpp  mesh_hole_filling.cpp
mesh_processing/geometry/: mymesh.cpp
model/: ASCT-B_3D_Models_Mapping.csv  ASCT-B_3D_Models_Mapping_v1.2.csv  asct-b-3d-models-crosswalk.csv  asct-b-3d-models-mapping.csv  asct-b-grlc.csv  number_of_AS.csv  organ_origins_meter_v1.2.csv  organ_origins_meter_v1.3.csv  organ_origins_meter_v1.4.csv  reference-organ-grlc.csv
model/AS/VH_F_Kidney_L/: hilum_of_kidney.off  kidney_calyx.off  kidney_capsule.off  major_calyx.off  minor_calyx.off  renal_column.off  renal_medulla.off  renal_papilla.off  renal_pelvis.off  renal_pyramid.off
model/AS/VH_F_Kidney_R/: cortex_of_kidney.off  hilum_of_kidney.off  kidney_calyx.off  kidney_capsule.off  major_calyx.off  minor_calyx.off  outer_cortex_of_kidney.off  renal_column.off  renal_medulla.off  renal_papilla.off  renal_pelvis.off  renal_pyramid.off
model/AS/VH_M_Kidney_L/: cortex_of_kidney.off  hilum_of_kidney.off  kidney_calyx.off  kidney_capsule.off  major_calyx.off  minor_calyx.off  outer_cortex_of_kidney.off  renal_column.off  renal_medulla.off  renal_papilla.off  renal_pelvis.off  renal_pyramid.off
model/AS/VH_M_Kidney_R/: cortex_of_kidney.off  hilum_of_kidney.off  kidney_calyx.off  kidney_capsule.off  major_calyx.off  minor_calyx.off  outer_cortex_of_kidney.off  renal_column.off  renal_medulla.off  renal_papilla.off  renal_pelvis.off  renal_pyramid.off
model/AS_filling_hole/VH_F_Kidney_L/: hilum_of_kidney  kidney_calyx  kidney_capsule  major_calyx  minor_calyx  renal_column  renal_medulla  renal_papilla  renal_pelvis  renal_pyramid
model/AS_filling_hole/VH_F_Kidney_R/: hilum_of_kidney  kidney_calyx  kidney_capsule  major_calyx  minor_calyx  outer_cortex_of_kidney  renal_medulla  renal_papilla  renal_pelvis  (+1 more)
scripts/: client.py  client_standard_request.py  download-data.sh  download_data.py  download_model.py  example_request.py  extract_origins.py
tests/__test__/: index.test.js
(+3448 files in other folders)
